chore: docker compose redis 추가 및 테스트

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,6 +20,10 @@ spring:
     properties:
       hibernate.timezone.default_storage: NORMALIZE_UTC
       hibernate.jdbc.time_zone: UTC
+  data:
+    redis:
+      redisson:
+        config: classpath:redisson.yml
 
 ---
 spring.config.activate.on-profile: local, test
