--- a/src/main/resources/redisson.yml
+++ b/src/main/resources/redisson.yml
@@ -1,13 +1,7 @@
-clusterServersConfig:
+singleServerConfig:
   idleConnectionTimeout: 10000
   connectTimeout: 10000
   timeout: 3000
   retryAttempts: 3
   retryInterval: 1500
-  nodeAddresses:
-    - "redis://localhost:7001"
-    - "redis://localhost:7002"
-    - "redis://localhost:7003"
-    - "redis://localhost:7004"
-    - "redis://localhost:7005"
-    - "redis://localhost:7006"
+  address: "redis://localhost:6379"
