test: 패키지 구조 변경에 맞춰 테스트 코드도 수정

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,4 +1,6 @@
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.datasource.hikari.maximum-pool-size=20
+spring.datasource.hikari.maximum-pool-size=30
+logging.level.org.springframework.test.context=DEBUG
+logging.level.org.springframework.boot.test=DEBUG
